# blimp_simulator

./: .gitignore  Cargo.toml
assets/: blimp.blend  blimp.glb
src/: app.rs  main.rs  render.rs  sensors_simulation.rs  sim.rs  virtual_camera.rs  websocket.rs
src/onboard_execution/: mod.rs
src/render/: camera.rs  headless.rs  mod.rs  windowed.rs
src/simulation/: camera.rs  constants.rs  mod.rs  physics.rs  setup.rs  util.rs
src/websocket/: mod.rs
