[package]
name = "blimp_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
blimp_onboard_software = { git = "https://github.com/Space-Coffee/blimp_onboard_software.git", branch = "develop" }
blimp_ground_ws_interface = { git = "https://github.com/Space-Coffee/blimp_ground_ws_interface.git", branch = "develop" }
serde = "1.0.215"
postcard = { version = "1.0.10", features = ["use-std"] }
futures-util = "0.3.31"
serde_json = "1.0.132"
bevy = "0.15.1"
bevy_headless_render = "0.2.0"
